---
title: i9lyfe ER Diagram
config:
    layout: elk
    theme: dark
---
erDiagram
    users ||--o{ posts : creates

    users }|--o{ users: follows

    posts }|--o{ users: mentions

    posts }|--o{ hashtags: includes

    users }|--o{ posts: reacts_to

    users }|--o{ posts: saves

    users }|--o{ posts: comments_on

    comments }|--o{ users: mentions

    users }|--o{ comments: reacts_to

    users }|--o{ posts: reposts

    users }|--o{ users: chats

    chats ||--o{ chat_history_entry: contains
